--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -116,11 +116,27 @@
             <th>Date Added</th>
         </tr>`
         products.forEach((item) => {
+            console.log(item)
             htmlString += `\n<tr>
             <td>${item.fields.name}</td>
             <td>${item.fields.price}</td>
             <td>${item.fields.description}</td>
             <td>${item.fields.date_added}</td>
+            <td>
+
+            <a href="edit-product/${item.pk}">
+                <button>
+                    Edit
+                </button>
+            </a>
+
+            <a href="delete/${item.pk}">
+                <button>
+                    Delete
+                </button>
+            </a>
+
+            </td>
         </tr>`
         })
 
